ansible/roles_ocp_workloads/ocp4_workload_synopsys_blackduck/files/insecure-bank-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insecure-bank-deployment
  labels:
    app: insecure-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insecure-bank
  template:
    metadata:
      labels:
        app: insecure-bank
    spec:
      containers:
      - name: insecure-bank
        image: quay.io/opssighttestorg/insecure-bank:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
