ansible/roles_ocp_workloads/ocp4_workload_synopsys_blackduck/files/insecure-bank-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: insecure-bank
  labels:
    app: insecure-bank
spec:
  selector:
    app: insecure-bank
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
