ansible/roles_ocp_workloads/ocp4_workload_synopsys_blackduck/files/insecure-bank-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: insecure-bank
  labels:
    app: insecure-bank
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: insecure-bank
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
